# bohr

./: Cargo.toml  build.rs
data/: periodic_table.json
src/: element.rs  lib.rs  orbitals.rs  periodictable.rs  reactant.rs  simple_molecule.rs  util.rs
